--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,21 @@
     box-sizing: border-box;
 }
 
+.section-title-items{
+    text-align: center;
+    margin-bottom: 45px;
+}
+.section-title-items h2{
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-title-items p{
+    font-size: 18px;
+    color: grey;
+    font-style: italic;
+}
+
 /* Header start */
 #header{
     padding: 10px 0;
@@ -69,3 +84,37 @@
     margin-top: 20px;
 }
 /* Hero end */
+
+
+/* service start */
+
+#service{
+    padding: 60px 0;
+}
+
+.service-items{
+    padding: 30px 40px;
+    text-align: center;
+}
+
+.service-items i{
+    border-radius: 50%;
+    padding: 30px;
+    background-color:orange;
+    color: #fff;
+    font-size: 35px;
+    margin-bottom: 15px;
+}
+
+.service-items h4{
+    font-size: 30px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.service-items p{
+
+    color: grey;
+    flex: 1 1 auto;
+}
+/* service end */
